Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110628

[Reg 6.2 -> 6.4] Binding does not accept local signal handlers anymore

XMLWordPrintable

    • 5bcbd0a51 (dev), d3d064d9a (6.5), e31a4def5 (6.4)

      Consider:

      import QtQml 2.15
      
      Binding {
         property var promise
      
         onPromiseChanged: {
            console.log(promise)
         }
      }
      

      This results in:

      qrc:/jschaub/main.qml:7:5: QML AsyncBinding: Unknown name "promiseChanged". The binding is ignored.
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes