Binding: Accept local signal handlers again

Fixes: QTBUG-110628
Change-Id: Ifc5023a3bfeb575df3102c3ea363903ebffa88ba
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 5bcbd0a513dcf929890a869ad01c68b3175fa6e2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>