tests/auto/qml/qqmlbinding/data/bindingWithHandler.qml
@@ -1,0 +1,7 @@
+import QtQml
+
+Binding {
+    property string input
+    property string output
+    onInputChanged: output = input
+}
